--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,19 @@
+/*Include tailwind*/
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
+
+@font-face {
+  font-family: 'DrukWide';
+  font-style: normal;
+  font-weight: normal;
+  src: local('DrukWide'), 
+  url('../public/fonts/DrukWideBold.woff') format('woff');
+}
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -98,6 +114,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.bg-body-gradient{
+  background: var(--additional-navyblue, #2B2D42);
 }
 
 @media (prefers-color-scheme: dark) {
